color contrast fixes

--- a/src/pages/webshop/components/Checkout/ShippingInfo/ShippingInfo.scss
+++ b/src/pages/webshop/components/Checkout/ShippingInfo/ShippingInfo.scss
@@ -104,7 +104,7 @@
     padding: 10px 0;
 
     button {
-      color: $mainColor;
+      color: $mainColorDark;
       border: none;
       font-weight: 600;
       background: none;
@@ -123,7 +123,7 @@
     justify-content: space-between;
 
     .price {
-      color: $mainColor;
+      color: $mainColorDark;
       font-size: 1.3em;
       margin-top: 15px;
     }
