--- a/src/pages/webshop/components/ShopFooter/ShopFooter.scss
+++ b/src/pages/webshop/components/ShopFooter/ShopFooter.scss
@@ -31,7 +31,7 @@ footer {
 
         &:first-child {
           a {
-            color: $mainColor;
+            color: $mainColorLight;
           }
         }
       }
